--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravel/socialite": "^2.0",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "zizaco/entrust": "5.2.x-dev",
+        "spatie/laravel-permission": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
